Closed
Bug 670313
Opened 14 years ago
Closed 14 years ago
"ASSERTION: Expecting non-negative active time"
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
mozilla8
People
(Reporter: jruderman, Assigned: birtles)
Details
(Keywords: assertion, testcase, Whiteboard: [inbound])
Attachments
(2 files)
|
288 bytes,
image/svg+xml
|
Details | |
|
4.70 KB,
patch
|
dholbert
:
review+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: Expecting non-negative active time: 'aActiveTime >= 0', file content/smil/nsSMILTimedElement.cpp, line 1843
| Assignee | ||
Updated•14 years ago
|
Assignee: nobody → birtles
Status: NEW → ASSIGNED
| Assignee | ||
Comment 1•14 years ago
|
||
Add range-checking to incoming instance times to ensure they won't overflow the range of a PRInt64.
Attachment #546694 -
Flags: review?(dholbert)
Updated•14 years ago
|
Attachment #546694 -
Flags: review?(dholbert) → review+
| Assignee | ||
Updated•14 years ago
|
OS: Mac OS X → All
Hardware: x86_64 → All
| Assignee | ||
Comment 2•14 years ago
|
||
Whiteboard: [inbound]
Comment 3•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
You need to log in
before you can comment on or make changes to this bug.
Description
•