Bug 670313 - Check range of instance time values when they are passed in; r=dholbert